tests/errors/function-void-return-value.ari
fn bad() {
  return 1;
}

fn main() -> i64 {
  bad();
  return 0;
}
